# libAVSForAudioEffect

./: CMakeLists.txt  README.md
include/: avs.h  avs_log.h
src/audio_effect/: aueffect.c  auto_tune.cpp  chorus.cpp  harmonizer.cpp  normalizer.cpp  pace_shift.cpp  pcm_interface.cpp  pitch_cycler.cpp  pitch_shift.cpp  wav_interface.cpp
src/base/: base.c
src/log/: log.c
src/queue/: locked_queue.c
